<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="5dp"
        android:orientation="vertical"
        android:id="@+id/settings_layout"
        android:background="#000">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="5dp">

            <ru.alemakave.mfstock.view.elements.HeadedTextBox
                android:id="@+id/ip_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/host"
                app:inputBarText="127.0.0.1"></ru.alemakave.mfstock.view.elements.HeadedTextBox>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="1"/>

            <ru.alemakave.mfstock.view.elements.HeadedTextBox
                android:id="@+id/port_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/port"
                app:inputBarText="9090" />
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="1"/>

            <ru.alemakave.mfstock.view.elements.HeadedTextBox
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/username" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"/>

            <ru.alemakave.mfstock.view.elements.HeadedTextBox
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/password" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"/>

            <ru.alemakave.mfstock.view.elements.HeadedTextBox
                android:id="@+id/font_size_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/font_size"
                app:inputBarText="12" />
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ru.alemakave.mfstock.view.elements.HeadedTextBox
                    android:id="@+id/prefix_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    app:header="@string/preffix"
                    app:inputBarText="!" />
                <Space
                        android:layout_width="10dp"
                        android:layout_height="0dp"/>

                <ru.alemakave.mfstock.view.elements.HeadedTextBox
                    android:id="@+id/postfix_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    app:header="@string/suffix"
                    app:inputBarText="\?" />
            </LinearLayout>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="1"/>
            <ru.alemakave.mfstock.view.elements.HeadedTextBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check_connection_timeout_input"
                    app:header="Таймаут ожидания соединения (ms)"
                    app:inputBarText="5000"/>
        </LinearLayout>
    </ScrollView>
    <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/save_settings_button"
            android:layout_weight="1"
            style="@style/MFStock.Widget.Button"/>
</LinearLayout>